[gd_scene load_steps=21 format=3 uid="uid://cmah3n5yk1251"]

[ext_resource type="Texture2D" uid="uid://duryn3em4in7j" path="res://rings/ring_frame1.png" id="1_bnidd"]
[ext_resource type="Texture2D" uid="uid://n5iwklii10kt" path="res://rings/ring_frame2.png" id="2_j8sow"]
[ext_resource type="Texture2D" uid="uid://c2g682ibqcf20" path="res://rings/ring_frame3.png" id="3_xkkmh"]
[ext_resource type="Texture2D" uid="uid://b48tgpl2csqq4" path="res://rings/ring_frame4.png" id="4_mlh8k"]
[ext_resource type="Texture2D" uid="uid://420tmdnlyb3h" path="res://rings/ring_frame5.png" id="5_ldahd"]
[ext_resource type="Texture2D" uid="uid://bce2se6sm4rat" path="res://rings/ring_frame6.png" id="6_fremu"]
[ext_resource type="Texture2D" uid="uid://ijfntsv032pm" path="res://rings/ring_frame7.png" id="7_8cyeu"]
[ext_resource type="Texture2D" uid="uid://8la1a4bpvfyj" path="res://rings/ring_frame8.png" id="8_2gejp"]
[ext_resource type="Texture2D" uid="uid://d0em26r22pnoe" path="res://rings/ring_frame9.png" id="9_5cw80"]
[ext_resource type="Texture2D" uid="uid://b8jq7atvgvjcr" path="res://rings/ring_frame10.png" id="10_x6kkq"]
[ext_resource type="Texture2D" uid="uid://cqu28jg5kyp0n" path="res://rings/ring_frame11.png" id="11_a0b7h"]
[ext_resource type="Texture2D" uid="uid://bjcqcit60kbvr" path="res://rings/ring_frame12.png" id="12_dolld"]
[ext_resource type="Texture2D" uid="uid://dh66okbh5h8ts" path="res://rings/ring_frame13.png" id="13_m0bf4"]
[ext_resource type="Texture2D" uid="uid://binyaoihy86kp" path="res://rings/ring_frame14.png" id="14_n8hqe"]
[ext_resource type="Texture2D" uid="uid://di0vym1cukyvn" path="res://rings/ring_frame15.png" id="15_k3ihd"]
[ext_resource type="Texture2D" uid="uid://d2h3e3ayk5ndx" path="res://rings/ring_frame16.png" id="16_00e1w"]
[ext_resource type="Script" path="res://ring_pickup.gd" id="17_li4xp"]
[ext_resource type="AudioStream" uid="uid://c3hfdmffqom8i" path="res://rings/ring.wav" id="18_8l06i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bm7ad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bnidd")
}, {
"duration": 1.0,
"texture": ExtResource("2_j8sow")
}, {
"duration": 1.0,
"texture": ExtResource("3_xkkmh")
}, {
"duration": 1.0,
"texture": ExtResource("4_mlh8k")
}, {
"duration": 1.0,
"texture": ExtResource("5_ldahd")
}, {
"duration": 1.0,
"texture": ExtResource("6_fremu")
}, {
"duration": 1.0,
"texture": ExtResource("7_8cyeu")
}, {
"duration": 1.0,
"texture": ExtResource("8_2gejp")
}, {
"duration": 1.0,
"texture": ExtResource("9_5cw80")
}, {
"duration": 1.0,
"texture": ExtResource("10_x6kkq")
}, {
"duration": 1.0,
"texture": ExtResource("11_a0b7h")
}, {
"duration": 1.0,
"texture": ExtResource("12_dolld")
}, {
"duration": 1.0,
"texture": ExtResource("13_m0bf4")
}, {
"duration": 1.0,
"texture": ExtResource("14_n8hqe")
}, {
"duration": 1.0,
"texture": ExtResource("15_k3ihd")
}, {
"duration": 1.0,
"texture": ExtResource("16_00e1w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pb1u0"]

[node name="Ring" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("17_li4xp")

[node name="RingSprite" type="AnimatedSprite2D" parent="Area2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bm7ad")
frame_progress = 0.044069
speed_scale = 7.0

[node name="RingSound" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("18_8l06i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pb1u0")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
